--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>Level Three</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         .button {
           border: none;
@@ -51,7 +51,7 @@
     
     
     <h1 style="color:white;">Where in the world this is located in the world</h1>
-    <img src="../images/weird-google-earth-finds-32.jpg" alt="world">
+    <img src="images/weird-google-earth-finds-32.jpg" alt="world">
     <button class="button button1" onclick="location.href='correct.html';">Russia</button>
     <button class="button button2" onclick="location.href='end.html';">Canda</button>
     <button class="button button3" onclick="location.href='https://www.coolmathgames.com/0-snake';">Cuba</button>
